glr-core/tests/fixtures/missing_index_to_symbol.stderr
error[E0560]: struct `SymbolMetadata` has no field named `is_terminal`
  --> tests/fixtures/missing_index_to_symbol.rs:27:17
   |
27 |                 is_terminal: true,
   |                 ^^^^^^^^^^^ `SymbolMetadata` does not have this field
   |
   = note: available fields are: `visible`, `named`, `supertype`

error[E0560]: struct `SymbolMetadata` has no field named `is_extra`
  --> tests/fixtures/missing_index_to_symbol.rs:28:17
   |
28 |                 is_extra: false,
   |                 ^^^^^^^^ `SymbolMetadata` does not have this field
   |
   = note: available fields are: `visible`, `named`, `supertype`

error[E0560]: struct `SymbolMetadata` has no field named `is_fragile`
  --> tests/fixtures/missing_index_to_symbol.rs:29:17
   |
29 |                 is_fragile: false,
   |                 ^^^^^^^^^^ `SymbolMetadata` does not have this field
   |
   = note: available fields are: `visible`, `named`, `supertype`

error[E0560]: struct `SymbolMetadata` has no field named `symbol_id`
  --> tests/fixtures/missing_index_to_symbol.rs:30:17
   |
30 |                 symbol_id: SymbolId(0),
   |                 ^^^^^^^^^ `SymbolMetadata` does not have this field
   |
   = note: available fields are: `visible`, `named`, `supertype`

error[E0560]: struct `SymbolMetadata` has no field named `is_terminal`
  --> tests/fixtures/missing_index_to_symbol.rs:34:17
   |
34 |                 is_terminal: false,
   |                 ^^^^^^^^^^^ `SymbolMetadata` does not have this field
   |
   = note: available fields are: `visible`, `named`, `supertype`

error[E0560]: struct `SymbolMetadata` has no field named `is_extra`
  --> tests/fixtures/missing_index_to_symbol.rs:35:17
   |
35 |                 is_extra: false,
   |                 ^^^^^^^^ `SymbolMetadata` does not have this field
   |
   = note: available fields are: `visible`, `named`, `supertype`

error[E0560]: struct `SymbolMetadata` has no field named `is_fragile`
  --> tests/fixtures/missing_index_to_symbol.rs:36:17
   |
36 |                 is_fragile: false,
   |                 ^^^^^^^^^^ `SymbolMetadata` does not have this field
   |
   = note: available fields are: `visible`, `named`, `supertype`

error[E0560]: struct `SymbolMetadata` has no field named `symbol_id`
  --> tests/fixtures/missing_index_to_symbol.rs:37:17
   |
37 |                 symbol_id: SymbolId(1),
   |                 ^^^^^^^^^ `SymbolMetadata` does not have this field
   |
   = note: available fields are: `visible`, `named`, `supertype`

error[E0063]: missing fields `goto_indexing` and `index_to_symbol` in initializer of `ParseTable`
  --> tests/fixtures/missing_index_to_symbol.rs:17:24
   |
17 |     let _parse_table = ParseTable {
   |                        ^^^^^^^^^^ missing `goto_indexing` and `index_to_symbol`
